# UniversityTutoringManager

./: Dockerfile
api/: Dockerfile  pyproject.toml
api/api/: __init__.py
api/api/ApplicationLayer/: Authenticate.py
api/api/DomainLayer/: User.py
api/api/PresentationLayer/: Authentication.py  dependencies.py
backend/: .dockerignore  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
backend/api/: __init__.py
backend/api/Presentation/common/: make_response.py
backend/api/Presentation/dependencies/: authorisation.py
backend/api/Presentation/middlewares/: secure_headers.py
backend/utm/: __init__.py
backend/utm/Infrastructure/ExternalServices/: school_lms.py
backend/utm/Infrastructure/Persistence/: Department.py
backend/utm/Presentation/common/: _exceptions.py  make_response.py
backend/utm/Presentation/dependencies/: authorisation.py  cohort.py  department.py  meeting.py  personal_tutor.py  student.py  student_cohort.py
backend/utm/Presentation/middlewares/: secure_headers.py
backend/utm/Presentation/models/: CohortBase.py  PersonalTutorBase.py  StudentBase.py  cohort.py  common.py  department.py  meeting.py  personal_tutor.py  staff.py  student.py  student_cohort.py
backend/utm/Presentation/routes/: Admin.py  Cohort.py  Department.py  Meeting.py  PersonalTutor.py  Student.py  StudentCohort.py  Tutor.py
backend/utm/core/Domain/: AcademicSession.py  Admin.py  Cohort.py  CohortBase.py  Department.py  DepartmentAdmin.py  DepartmentStaff.py  Meeting.py  PersonalTutor.py  PersonalTutorBase.py  Student.py  StudentBase.py  Tutor.py  (+1 more)
(+48 files in other folders)
