[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["nwizugbesamson <samson6398@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
