[tool.poetry]
name = "utm"
version = "0.1.0"
description = ""
authors = ["nwizugbesamson <samson6398@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
secure = "^0.3.0"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.28.0"
faker = "^24.8.0"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.2"
faker = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
